--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>drc.pcpsolver</groupId>
   <artifactId>pcpsolver</artifactId>
-  <version>1.0</version>
+  <version>1.1-beta</version>
   <packaging>jar</packaging>
 
   <name>PCPSolver</name>
